--- a/FE/index.html
+++ b/FE/index.html
@@ -12,5 +12,6 @@
 <body>
     <div id="app"></div>
 </body>
-<script type="text/javascript" src="bundle.js"></script>
+<!--<script type="text/javascript" src="bundle.js"></script>-->
+<script type="text/javascript" src="./build/bundle.js"></script>
 </html>
