--- a/FE/index.html
+++ b/FE/index.html
@@ -7,11 +7,29 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!--<link rel="stylesheet" type="text/css"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">-->
+    <style>
+        .page-footer{
+            width:100%;
+            height:64px;
+            line-height:64px;
+            text-align:center;
+            background:#ececec;
+            color:rgba(0, 0, 0, 0.65);
+            padding:0px 50px;
+            font-size:12px;
+            position: fixed;
+            bottom: 0px;
+        }
+    </style>
     <title>链接测试</title>
 </head>
 <body>
-    <div id="app"></div>
+    <div id="app" style="margin-bottom:100px;"></div>
+    <div class="page-footer">
+        艰难困苦，玉汝于成
+    </div>
 </body>
-<!--<script type="text/javascript" src="bundle.js"></script>-->
-<script type="text/javascript" src="./build/bundle.js"></script>
+<script type="text/javascript" src="bundle.js"></script>
+<!--<script type="text/javascript" src="./build/bundle.js"></script>-->
+<script></script>
 </html>
