--- a/FE/index.html
+++ b/FE/index.html
@@ -31,5 +31,13 @@
 </body>
 <script type="text/javascript" src="bundle.js"></script>
 <!--<script type="text/javascript" src="./build/bundle.js"></script>-->
-<script></script>
+<script>
+
+    window.onhashchange = function(){
+        if(window.location.hash == "#/"){
+            window.location.href = "#/home";
+        }
+    }
+
+</script>
 </html>
